setup listener that pop-up menu can use to hide when full2D open; fix z-index of full2D when multiple opened in a row

--- a/css/index.css
+++ b/css/index.css
@@ -2029,10 +2029,10 @@ Logic Interface CSS
     position: absolute;
     border-radius: 96px;
     border: 16px solid white;
-    width: 440px;
-    height: 440px;
-    left: calc(100vw/2 - 440px/2 - 16px);
-    top: calc(100vh/2 - 440px/2 - 16px);
+    width: 300px;
+    height: 300px;
+    left: calc(100vw/2 - 300px/2 - 16px);
+    top: calc(100vh/2 - 300px/2 - 16px);
 }
 
 .tool-color-gradient {
@@ -2051,7 +2051,7 @@ Logic Interface CSS
 
 .minimizedEnvelopeIcon:hover {
     border: 24px solid white;
-    left: calc(100vw/2 - 440px/2 - 24px);
-    top: calc(100vh/2 - 440px/2 - 24px);
+    left: calc(100vw/2 - 300px/2 - 24px);
+    top: calc(100vh/2 - 300px/2 - 24px);
     background: black;
 }
